--- a/translations/kangyur/placeholders/090-022_toh578,934-incantation_of_the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/090-022_toh578,934-incantation_of_the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-022-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-022"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +74,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T13:20:31.443Z" type="text-version" status="0.0.7" xml:id="UT22084-090-022-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:58:56.721Z" type="translation-status" status="2.g" xml:id="UT22084-090-022-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T07:58:56.721Z" type="text-version" status="0.0.8" xml:id="UT22084-090-022-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
