--- a/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
+++ b/translations/kangyur/placeholders/090-029_toh585,941-essence_of_the_gandavyuha.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-029-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-029"/>
                 <date/>
             </publicationStmt>
@@ -72,6 +72,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T15:48:27.103Z" type="text-version" status="0.0.7" xml:id="UT22084-090-029-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:00:14.819Z" type="translation-status" status="2.g" xml:id="UT22084-090-029-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:00:14.819Z" type="text-version" status="0.0.8" xml:id="UT22084-090-029-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
