--- a/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
+++ b/translations/kangyur/placeholders/090-032_toh588,944-the_incantation_that_captures_the_great_amulet.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-032-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-090-032"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +74,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-05T15:52:15.565Z" type="text-version" status="0.0.7" xml:id="UT22084-090-032-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:12:38.204Z" type="translation-status" status="2.g" xml:id="UT22084-090-032-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:12:38.204Z" type="text-version" status="0.0.8" xml:id="UT22084-090-032-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
