--- a/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
+++ b/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-003-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-003"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T09:40:16.826Z" type="text-version" status="0.0.6" xml:id="UT22084-091-003-12">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:23:55.861Z" type="translation-status" status="2.g" xml:id="UT22084-091-003-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:23:55.861Z" type="text-version" status="0.0.7" xml:id="UT22084-091-003-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
