--- a/translations/kangyur/placeholders/034-013_toh25,553-the_hundred_and_eight_names_of_the_perfection_of_wisdom.xml
+++ b/translations/kangyur/placeholders/034-013_toh25,553-the_hundred_and_eight_names_of_the_perfection_of_wisdom.xml
@@ -17,12 +17,12 @@
                 <author role="translatorEng" xml:id="UT22084-034-013-6">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-034-013"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-06T12:50:47.224Z" type="text-version" status="0.0.4" xml:id="UT22084-034-013-7">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:51:42.861Z" type="translation-status" status="2.h" xml:id="UT22084-034-013-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T08:51:42.861Z" type="text-version" status="0.0.5" xml:id="UT22084-034-013-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
