--- a/translations/tengyur/placeholders/045-013_toh1915-caturdevatapariprcchavyakhyanopadesapaustika.xml
+++ b/translations/tengyur/placeholders/045-013_toh1915-caturdevatapariprcchavyakhyanopadesapaustika.xml
@@ -4,17 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">An Explanation of the “Questions of the Four Goddesses” Tantra called “Extensive Personal Instructions”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Catur­devatā­paripṛcchā­vyākhyāna­upadeśa­pauṣṭika­nāma</title>
                 <title xml:lang="bo" type="mainTitle">ལྷ་མོ་བཞིས་ཡོངས་སུ་ཞུས་པའི་རྣམ་པར་བཤད་པ་མན་ངག་རྒྱས་པ་ཞེས་བྱ་བ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">lha mo bzhis yongs su zhus pa'i rnam par bshad pa man ngag rgyas pa zhes bya ba/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Catur­devatā­paripṛcchā­vyākhyāna­upadeśa­pauṣṭika­nāma</title>
-                <title xml:lang="en" type="mainTitle">An Explanation of the “Questions of the Four Goddesses” Tantra called “Extensive Personal Instructions”</title>
+                <author role="translatorMain" xml:id="UT23703-045-013-7">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-045-013-8">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-045-013"/>
             </publicationStmt>
             <sourceDesc>
@@ -44,6 +46,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-08-29T14:23:45.41Z" type="text-version" status="0.0.1" xml:id="UT23703-045-013-6">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-29T14:24:31.249Z" type="text-version" status="0.0.2" xml:id="UT23703-045-013-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T09:44:44.331Z" type="translation-status" status="2.h" xml:id="UT23703-045-013-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T09:44:44.331Z" type="text-version" status="0.0.3" xml:id="UT23703-045-013-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
