--- a/translations/tengyur/placeholders/045-014_toh1916-caturdevatapariprcchatika.xml
+++ b/translations/tengyur/placeholders/045-014_toh1916-caturdevatapariprcchatika.xml
@@ -4,17 +4,19 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">An Explanation of the “Questions of the Four Goddesses” Tantra</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Catur­devatā­paripṛcchā­ṭīkā</title>
                 <title xml:lang="bo" type="mainTitle">ལྷ་མོ་བཞིས་ཡོངས་སུ་ཞུས་པའི་རྣམ་པར་བཤད་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">lha mo bzhis yongs su zhus pa'i rnam par bshad pa/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Catur­devatā­paripṛcchā­ṭīkā</title>
-                <title xml:lang="en" type="mainTitle">An Explanation of the “Questions of the Four Goddesses” Tantra</title>
+                <author role="translatorMain" xml:id="UT23703-045-014-7">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-045-014-8">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-045-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -44,6 +46,15 @@
                 </change>
                 <change who="#line-tofte" when="2024-07-10T12:33:37.917Z" type="text-version" status="0.0.1" xml:id="UT23703-045-014-6">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-10T12:34:31.459Z" type="text-version" status="0.0.2" xml:id="UT23703-045-014-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T09:53:57.437Z" type="translation-status" status="2.h" xml:id="UT23703-045-014-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-20T09:53:57.437Z" type="text-version" status="0.0.3" xml:id="UT23703-045-014-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
