--- a/translations/kangyur/translations/094-009_toh732,992-the_yasovati_dharani.xml
+++ b/translations/kangyur/translations/094-009_toh732,992-the_yasovati_dharani.xml
@@ -21,7 +21,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-094-009-143">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -156,6 +156,9 @@
                 <change who="#admin" when="2024-09-16T09:48:54.221Z" type="text-version" status="1.0.0" xml:id="UT22084-094-009-151">
                     <desc>User set version to 1.0.0</desc>
                 </change>
+                <change who="#andre" when="2024-09-22T13:10:12.752Z" type="text-version" status="1.0.1" xml:id="UT22084-094-009-152">
+                    <desc>Glossary integration revised, activated in CG + definition of Yaśovatī updated</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -188,7 +191,7 @@
                 <div type="section" xml:id="UT22084-094-009-introduction-1">
                     <milestone unit="chunk" xml:id="UT22084-094-009-48"/>
                     <p tid="9">
-                        <title xml:lang="en">The Yaśovatī Dhāraṇī </title>is a collection of six
+                        <title xml:lang="en">The <term>Yaśovatī</term> Dhāraṇī </title>is a collection of six
                         dhāraṇīs that are recited to cure and protect oneself from various illnesses, the
                         influence of demonic beings, and, in one case, to revive the recently deceased. The
                         first five dhāraṇīs open with a verse of homage to the Three Jewels and the
@@ -196,17 +199,17 @@
                         Avalokiteśvara, and the bodhisattva Vajrapāṇi. The text does not include any
                         introductory material concerning the occasion when it was first taught, the audience
                         present for the teaching, or the individual who gave the teaching. It also contains no
-                        information on the identity of Yaśovatī (Tib. <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign>), and it is not clear if this name refers to a goddess,
+                        information on the identity of <term>Yaśovatī</term> (Tib. <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign>), and it is not clear if this name refers to a goddess,
                         to the dhāraṇī itself, or to both.</p>
                     <milestone unit="chunk" xml:id="UT22084-094-009-49"/>
-                    <p tid="10">There are numerous figures in the Kangyur and Tengyur with the name Yaśovatī
-                        or with a name approximating or synonymous to Yaśovatī.<note place="end" xml:id="UT22084-094-009-50"> In <title xml:lang="en">The Good Eon</title>, the
+                    <p tid="10">There are numerous figures in the Kangyur and Tengyur with the name <term>Yaśovatī</term>
+                        or with a name approximating or synonymous to <term>Yaśovatī</term>.<note place="end" xml:id="UT22084-094-009-50"> In <title xml:lang="en">The Good Eon</title>, the
                             buddhas Dhārmika, Ajitagaṇa, Suvayas, Maṇicandra, Arthamati, and Siṃhabala all
                             have mothers named “Endowed with Fame”. See <title xml:lang="en">The Good Eon</title>,
                             (<title xml:lang="Sa-Ltn">Bhadrakalpika</title>, Toh 94), 
                                 <ptr target="#UT22084-045-001-873"/><!--2.B.68-->; <ptr target="#UT22084-045-001-1535"/><!--2.B.723-->; <ptr target="#UT22084-045-001-1583"/><!--2.B.771-->; <ptr target="#UT22084-045-001-1619"/><!--2.B.807-->; <ptr target="#UT22084-045-001-1837"/><!--2.B.1022-->; <ptr target="#UT22084-045-001-1894"/><!--2.B.1079-->. A goddess named <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign> appears in <title xml:lang="en">The Play in Full</title> as a protector of the southern
                             quadrant, but in this case the underlying Sanskrit appears to be Yaśamatī, a
-                            synonym for Yaśovatī. See <title xml:lang="en">The Play in Full</title> (<title xml:lang="Sa-Ltn">Lalita­vistara</title>, Toh 95),
+                            synonym for <term>Yaśovatī</term>. See <title xml:lang="en">The Play in Full</title> (<title xml:lang="Sa-Ltn">Lalita­vistara</title>, Toh 95),
                             <ptr target="#UT22084-046-001-1975"/><!--24.144-->. A woman named <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign> also appears as the wife
                             of the general Siṁha (Tib. <foreign xml:lang="Bo-Ltn" type="term">seng
                                 ge</foreign>) in <title xml:lang="en">The Hundred Exemplary Tales, Beginning with That
@@ -216,9 +219,9 @@
                             perfecting the bodhisattva path for three countless eons. See <title xml:lang="Bo-Ltn">gang po la sogs pa’i rtogs pa brjod pa brgya ba
                                 </title>(<title xml:lang="Sa-Ltn">Pūrṇa­pramukhāvadāna­śataka</title>), Toh
                             343, Degé Kangyur vol. 75 (mdo sde, am), folios 5.a–7.b. Edgerton also suggests
-                            that the name Yaśovatī functions as a synonym for the bodhisattva Siddhārtha’s
+                            that the name <term>Yaśovatī</term> functions as a synonym for the bodhisattva Siddhārtha’s
                             wife. See Edgerton 1953, p. 445. </note> A goddess (or goddesses) by the name
-                            <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign> appears in <title xml:lang="en">The Root Manual of the Rites of Mañjuśrī</title>,<note place="end" xml:id="UT22084-094-009-51"> Goddesses with the names Yaśovatī and Yaśavatī (both
+                            <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign> appears in <title xml:lang="en">The Root Manual of the Rites of Mañjuśrī</title>,<note place="end" xml:id="UT22084-094-009-51"> Goddesses with the names <term>Yaśovatī</term> and Yaśavatī (both
                             rendered in Tibetan as <foreign xml:lang="Bo-Ltn" type="term">grags ldan
                                 ma</foreign>) appear first as the name of a vidyā queen and then as the name
                             of a dhūtī within Vajrapāṇi’s retinue. See <title xml:lang="en">The Root Manual of
@@ -272,17 +275,17 @@
                         </note> None of the passages in the Kangyur and Tengyur that mention a goddess named
                             <foreign xml:lang="Bo-Ltn" type="term">grags ldan ma</foreign>, however, provide
                         any description or broader information about this goddess, or any indication that she
-                        is at all related to the Yaśovatī associated with this dhāraṇī. As a result, the
-                        identity of Yaśovatī who appears in the title of this dhāraṇī remains uncertain.</p>
+                        is at all related to the <term>Yaśovatī</term> associated with this dhāraṇī. As a result, the
+                        identity of <term>Yaśovatī</term> who appears in the title of this dhāraṇī remains uncertain.</p>
                     <milestone unit="chunk" xml:id="UT22084-094-009-58"/>
-                    <p tid="11">There are no extant Sanskrit witnesses of <title xml:lang="en">The Yaśovatī
+                    <p tid="11">There are no extant Sanskrit witnesses of <title xml:lang="en">The <term>Yaśovatī</term>
                             Dhāraṇī </title>and the text does not appear to have been translated into Chinese.
                         It is not included in either of the imperial Tibetan catalogs of translated works, and
                         the text does not contain a translator’s colophon. Thus, there is also no clear data
                         on when and under what circumstances this dhāraṇī was translated into Tibetan. </p>
                     <milestone unit="chunk" xml:id="UT22084-094-009-59"/>
                     <p tid="12">This translation was prepared on the basis of <title xml:lang="en">The
-                            Yaśovatī Dhāraṇī </title>contained in the Degé Kangyur in both the Tantra
+                            <term>Yaśovatī</term> Dhāraṇī </title>contained in the Degé Kangyur in both the Tantra
                         Collection (<title xml:lang="Bo-Ltn">rgyud ’bum</title>) and the Compendium of
                         Dhāraṇīs (<title xml:lang="Bo-Ltn">gzungs ’dus</title>)<note place="end" xml:id="UT22084-094-009-132">
                             <p key="toh992">This text, Toh 992, and all those contained in this same volume
@@ -413,7 +416,7 @@
                         bhūtagraha, one should take a thread spun by a young girl, incant it with the mantra
                         twenty-one times, and tie it to them. They will then be released. </p>
                     <milestone unit="chunk" xml:id="UT22084-094-009-83"/>
-                    <trailer tid="36">This concludes “<title xml:lang="en">The Yaśovatī
+                    <trailer tid="36">This concludes “<title xml:lang="en">The <term>Yaśovatī</term>
                         Dhāraṇī</title>.”</trailer>
                 </div>
             </div>
@@ -590,7 +593,7 @@
                     </div>
                 </div>
             </div>
-            <div type="glossary" status="excluded" xml:id="UT22084-094-009-glossary">
+            <div type="glossary" xml:id="UT22084-094-009-glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-094-009-120">
@@ -616,14 +619,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-094-009-122">
-                            <term type="translationMain">yaśovatī</term>
-                            <term xml:lang="Bo-Ltn" n="1">grags ldan ma </term>
-                            <term xml:lang="bo" n="1">གྲགས་ལྡན་མ།</term>
+                        <gloss xml:id="UT22084-094-009-122" type="person" mode="marked">
+                            <term type="translationMain">Yaśovatī</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary">yaśovatī</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">grags ldan ma</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">གྲགས་ལྡན་མ།</term>
                             <note type="definition">
-                                <p>“Renowned,” the name of a text containing multiple
-                                    dhāraṇīs. </p>
+                                <p>“Renowned.” The title of this text containing multiple dhāraṇīs. This name may refer to a goddess, to the dhāraṇī itself, or to both. See <ptr target="#UT22084-094-009-49"/>.</p>
                             </note>
                         </gloss>
                     </item>
