--- a/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
+++ b/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
@@ -9,15 +9,16 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">dbyig ldan gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryahiraṇyavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dbyig dang ldan pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-014-1"/>
-                <author role="translatorEng" xml:id="UT22084-090-014-2">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-090-014-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-090-014-2">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-090-014-14">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-014"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +69,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-28T14:32:27.157Z" type="text-version" status="0.0.6" xml:id="UT22084-090-014-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:33:00.673Z" type="text-version" status="0.0.7" xml:id="UT22084-090-014-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T08:24:03.036Z" type="translation-status" status="2.f" xml:id="UT22084-090-014-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T08:24:03.036Z" type="text-version" status="0.0.8" xml:id="UT22084-090-014-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
