--- a/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
+++ b/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
@@ -10,15 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryajāṅgulīnāmavidyā</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dug sel ces bya ba'i rig sngags/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dug sel gyi rig sngags/</title>
-                <author role="translatorMain" xml:id="UT22084-090-015-1"/>
-                <author role="translatorEng" xml:id="UT22084-090-015-2">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-090-015-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-090-015-2">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-090-015-14">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-015"/>
                 <date/>
             </publicationStmt>
@@ -69,6 +70,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-28T14:33:26.291Z" type="text-version" status="0.0.6" xml:id="UT22084-090-015-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:34:01.755Z" type="text-version" status="0.0.7" xml:id="UT22084-090-015-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T08:25:28.375Z" type="translation-status" status="2.f" xml:id="UT22084-090-015-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T08:25:28.375Z" type="text-version" status="0.0.8" xml:id="UT22084-090-015-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
