--- a/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
+++ b/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
@@ -7,19 +7,20 @@
                 <title type="mainTitle" xml:lang="en">The Queen of Spells, Aṅgulī</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Aṅgulīvidyārājñī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sor mo can zhes bya ba rig pa'i rgyal mo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Aṅgulīnāmavidyārājñī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Siddhipaṭhita­bhagavatyāryāṅgulī­nāmavidyārājñī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Aṅgulīnāmavidyārājñī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas 'grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bklags pas grub pa bcom ldan 'das ma 'phags ma sor mo can zhes bya ba rig pa'i rgyal mo/</title>
-                <author role="translatorMain" xml:id="UT22084-090-016-1"/>
-                <author role="translatorEng" xml:id="UT22084-090-016-2">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-090-016-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-090-016-2">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-090-016-14">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-016"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +71,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-28T14:35:02.649Z" type="text-version" status="0.0.6" xml:id="UT22084-090-016-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:35:41.695Z" type="text-version" status="0.0.7" xml:id="UT22084-090-016-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T10:28:01.089Z" type="translation-status" status="2.f" xml:id="UT22084-090-016-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T10:28:01.089Z" type="text-version" status="0.0.8" xml:id="UT22084-090-016-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
