--- a/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
+++ b/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
@@ -7,18 +7,19 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Mother of All Dharmas</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Sarvadharmamātṛkādhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos thams cad kyi yum gyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāsarvadharmamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvadharmamātṛkānāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāsarvadharmamātṛkānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa chos thams cad kyi yum zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-090-017-1"/>
-                <author role="translatorEng" xml:id="UT22084-090-017-2">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-090-017-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-090-017-2">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-090-017-14">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-090-017"/>
                 <date/>
             </publicationStmt>
@@ -69,6 +70,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-28T14:36:07.544Z" type="text-version" status="0.0.6" xml:id="UT22084-090-017-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-28T14:36:49.734Z" type="text-version" status="0.0.7" xml:id="UT22084-090-017-15">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T10:29:38.816Z" type="translation-status" status="2.f" xml:id="UT22084-090-017-16">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-23T10:29:38.816Z" type="text-version" status="0.0.8" xml:id="UT22084-090-017-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
