--- a/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
+++ b/translations/kangyur/placeholders/035-020_toh44-20-chapter_20_the_ten_categories_of_bodhisattvas.xml
@@ -9,13 +9,14 @@
                 <title type="otherTitle" xml:lang="zh">菩薩十住品/十住品</title>
                 <author role="translatorMain" xml:id="UT22084-035-020-6">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-035-020-7">Ana Cristina Lopes</author>
+                <editor role="projectEditor" xml:id="UT22084-035-020-15">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-035-020"/>
             </publicationStmt>
             <sourceDesc>
@@ -59,6 +60,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-14T12:52:55.754Z" type="text-version" status="0.0.8" xml:id="UT22084-035-020-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-14T12:53:27.896Z" type="text-version" status="0.0.9" xml:id="UT22084-035-020-16">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-24T13:39:21.345Z" type="translation-status" status="2.f" xml:id="UT22084-035-020-17">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-24T13:39:21.345Z" type="text-version" status="0.0.10" xml:id="UT22084-035-020-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
