--- a/translations/kangyur/translations/062-019_toh219-putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/translations/062-019_toh219-putting_an_end_to_karmic_obscurations.xml
@@ -31,7 +31,7 @@
                 <editor role="copyEditor" xml:id="UT22084-062-019-433">Tracy Davis</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -49,7 +49,7 @@
                 <idno xml:id="UT22084-062-019"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means that these ids diverge slightly from the standard
                     logic.</note>
-                <date>2024-05-01</date>
+                <date>2024-09-24</date>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh219" type="text">
@@ -153,6 +153,9 @@
                 </change>
                 <change who="#celso" when="2024-09-24T17:00:16.666Z" type="text-version" status="1.0.0" xml:id="UT22084-062-019-436">
                     <desc>First published version</desc>
+                </change>
+                <change who="#celso" when="2024-09-24T18:02:30.447Z" type="text-version" status="1.0.1" xml:id="UT22084-062-019-437">
+                    <desc>corrected publication date</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
