--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light_1.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light_1.xml
@@ -39,7 +39,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.13 <date>2024</date>
+                <edition>v 1.2.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -255,6 +255,9 @@
                 <change who="#celso" when="2024-09-21T23:57:55.313Z" type="text-version" status="1.1.13" xml:id="UT22084-089-012-4174">
                     <desc>Small corrections</desc>
                 </change>
+                <change who="#celso" when="2024-09-24T23:05:26.961Z" type="text-version" status="1.2.0" xml:id="UT22084-089-012-4175">
+                    <desc>corrections harmonizing with Toh 556/557 publications</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -432,10 +435,10 @@
                                 2625<ref rend="pending" target="https://read.84000.co/translation/toh2625"/>;
                             (8) Ānandagarbha, <title xml:lang="Bo-Ltn">de bzhin gshegs pa dgra bcom pa yang
                                 dag par rdzogs pa’i sangs rgyas ngan song thams cad yongs su sbyong ba gzi
-                                brjid kyi rgyal po zhes bya ba’i bshad pa</title> (<title xml:lang="Sa-Ltn">Sarva­durgatipariśodhana­tejorāja­tathāgatārhatsamyak­saṁbuddha­nāmakalpaṭīkā</title>),
+                                brjid kyi rgyal po zhes bya ba’i bshad pa</title> (<title xml:lang="Sa-Ltn">Sarva­durgatipariśodhana­tejorāja­tathāgatārhatsamyak­saṃbuddha­nāmakalpaṭīkā</title>),
                             Toh 2628, folio 73.a<ref rend="pending" target="https://read.84000.co/translation/toh2628" inst="F.73.a"/>; (9)
                             Sthiramati, <title xml:lang="Bo-Ltn">rgyan dam pa sna tshogs rim par phye ba bkod
-                                pa</title> (<title xml:lang="Sa-Ltn">Para­mālaṁkāraviśva­paṭalavyūha</title>),
+                                pa</title> (<title xml:lang="Sa-Ltn">Paramālaṃkāraviśva­paṭalavyūha</title>),
                             Toh 2661, folio 322.b<ref rend="pending" target="https://read.84000.co/translation/toh2661" inst="F.322.b"/>; (10)
                             Sahajalalita, <title xml:lang="Bo-Ltn">kun nas sgor ’jug pa’i ’od zer gtsug tor
                                 dri ma med par snang ba de bzhin gshegs pa thams cad kyi snying po dang dam
@@ -474,15 +477,15 @@
                                 pa’i rgya cher bshad pa</title> (<title xml:lang="Sa-Ltn">Mañjuśri­nāmasaṅgitiṭīka</title>), Toh 2534, folio 217.b<ref rend="pending" target="https://read.84000.co/translation/toh2534" inst="F.217.b"/>; (4)
                                 <!--Dīpaṁkaraśrījñāna-->Haribhadra, <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa
                                 brgyad stong pa’i bshad pa mngon par rtogs pa’i rgyan gyi snang ba</title>
-                                (<title xml:lang="Sa-Ltn">Aṣṭa­sāha­srikā­prajñāpāramitā­vyākhyānābhi­samayālaṁkārāloka</title>), Toh
+                                (<title xml:lang="Sa-Ltn">Aṣṭa­sāha­srikā­prajñāpāramitā­vyākhyānābhi­samayālaṃkārāloka</title>), Toh
                             3791, folio 84.b<ref rend="pending" target="https://read.84000.co/translation/toh3791" inst="F.84.b"/>; (5)
                             Dharmakīrtiśrī, <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa’i man
                                 ngag gi bstan bcos mngon par rtogs pa’i rgyan zhes bya ba’i ’grel pa rtogs par
-                                dka’ ba’i snang ba zhes bya ba’i ’grel bshad</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṁkāra­nāma­prajñā­pāramitopadeśa­śāstra­vṛttidurbodhāloka­nāmaṭīkā</title>),
+                                dka’ ba’i snang ba zhes bya ba’i ’grel bshad</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṃkāra­nāma­prajñā­pāramitopadeśa­śāstra­vṛttidurbodhāloka­nāmaṭīkā</title>),
                             Toh 3794, folio 152.b<ref rend="pending" target="https://read.84000.co/translation/toh3794" inst=" F.152.b"/>; (6)
                             Dharmamitra, <title xml:lang="Bo-Ltn">shes rab kyi pha rol tu phyin pa’i man ngag
                                 gi bstan bcos mngon par rtogs pa’i rgyan gyi tshig le’ur byas pa’i ’grel bshad
-                                tshig rab tu gsal ba</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṁkāra­kārikā­prajñā­pāramitopadeśa­śāstra­ṭīkā
+                                tshig rab tu gsal ba</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṃkāra­kārikā­prajñā­pāramitopadeśa­śāstra­ṭīkā
                                 prasphuṭapadā</title>), Toh 3796, folio 104.a<ref rend="pending" target="https://read.84000.co/translation/toh3796" inst="F.104.a"/>.</note>
                         two of which<note place="end" xml:id="UT22084-089-012-27"> (1) Āryadeva, Toh 1803,
                             folio 217.b<ref rend="pending" target="https://read.84000.co/translation/toh1803" inst="F.217.b"/>; (2) <!--Dīpaṁkaraśrījñāna-->Haribhadra, Toh 3791, folio 84.b<ref rend="pending" target="https://read.84000.co/translation/toh3791" inst="F.84.b"/>.</note> cite the delightful verse that describes the
@@ -496,7 +499,7 @@
                                 gsang ba</title> (<title xml:lang="Sa-Ltn">Mahā­vajra­dhara­pathakramopadeśāmṛta­guhya</title>), Toh 1823, folio
                                 274.a<ref rend="pending" target="https://read.84000.co/translation/toh1823" inst="F.274.a"/>; (2) Yeshé Dé, <title xml:lang="Bo-Ltn">lang kar gshegs pa
                                 zhes bya ba theg pa chen po’i mdo’i ’grel pa de bzhin gshegs pa’i snying po’i
-                                rgyan</title> (<title xml:lang="Sa-Ltn">Laṅkāvatāra­nāma­mahāyāna­sūtra­vṛttitathāgata­hṛdayālaṁkāra</title>), Toh
+                                rgyan</title> (<title xml:lang="Sa-Ltn">Laṅkāvatāra­nāma­mahāyāna­sūtra­vṛttitathāgata­hṛdayālaṃkāra</title>), Toh
                             4019, folios 29.a, 29.b, 152.b, 279.b, 302.a<ref rend="pending" target="https://read.84000.co/translation/toh4019" inst="F.29.a, F.29.b,                             F.152.b, F.279.b, F.302.a"/>.</note> although nothing is known about the author.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-30"/>
                     <p tid="27">In Newar Buddhism this sūtra became and remains one of the nine principal
@@ -4348,7 +4351,7 @@
                         obscurations through practicing purity through regret.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-823"/>
                     <p tid="528">“Noble son, if they wish to be reborn among the devas of the
-                        Cāturmahārāja­kāyikā, the devas of Trāyastriṃśa, the devas of Yāma, the devas of
+                        Cāturmahārāja­kāyika, the devas of Trāyastriṃśa, the devas of Yāma, the devas of
                         Tuṣita, the devas of Nirmāṇarati, or the devas of Paranirmita­vaśavartin, they should
                         purify themselves of karmic obscurations through practicing purity through regret.</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-824"/>
@@ -14856,7 +14859,7 @@
                         veneration placed her palms together and praised the Bhagavat with these pure
                         words:</p>
                     <milestone unit="chunk" xml:id="UT22084-089-012-3103"/>
-                    <p tid="1881">“I pay homage to the tathāgata arhat samyaksambuddha Śākyamuni, who has a
+                    <p tid="1881">“I pay homage to the tathāgata arhat samyaksaṃbuddha Śākyamuni, who has a
                         pure body the color of gold—his throat has the shape of a conch; his face is like a
                         full moon and his eyes are like blue lotuses; his lips are red and beautiful, like the
                         color of a bimba;<note place="end" xml:id="UT22084-089-012-3104"> The text actually
@@ -15378,16 +15381,16 @@
                         <bibl xml:id="UT22084-089-012-3209">Buddhānandagarbha. <title xml:lang="Bo-Ltn">de
                                 bzhin gshegs pa dgra bcom pa yang dag par rdzogs pa’i sangs rgyas ngan song
                                 thams cad yongs su sbyong ba gzi brjid kyi rgyal po zhes bya ba’i bshad
-                                pa</title> (<title xml:lang="Sa-Ltn">Sarva­durgatipariśodhana­tejorāja­tathāgatārhatsamyak­saṁbuddha­nāmakalpaṭīkā</title>).
+                                pa</title> (<title xml:lang="Sa-Ltn">Sarva­durgatipariśodhana­tejorāja­tathāgatārhatsamyak­saṃbuddha­nāmakalpaṭīkā</title>).
                             Toh 2628, Degé Tengyur vol. 68 (rgyud, ju), folios 1.a–97.a.</bibl>
                         <bibl xml:id="UT22084-089-012-3210">Dharmakīrtiśrī. <title xml:lang="Bo-Ltn">shes rab
                                 kyi pha rol tu phyin pa’i man ngag gi bstan bcos mngon par rtogs pa’i rgyan
                                 zhes bya ba’i ’grel pa rtogs par dka’ ba’i snang ba zhes bya ba’i ’grel
-                                bshad</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṁkāra­nāma­prajñā­pāramitopadeśa­śāstra­vṛttidurbodhāloka­nāmaṭīkā</title>).
+                                bshad</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṃkāra­nāma­prajñā­pāramitopadeśa­śāstra­vṛttidurbodhāloka­nāmaṭīkā</title>).
                             Toh 3794, Degé Tengyur vol. 86 (sher phyin, ja), folios 140.b–254.a. </bibl>
                         <bibl xml:id="UT22084-089-012-3211">Dharmamitra. <title xml:lang="Bo-Ltn">shes rab kyi
                                 pha rol tu phyin pa’i man ngag gi bstan bcos mngon par rtogs pa’i rgyan gyi
-                                tshig le’ur byas pa’i ’grel bshad tshig rab tu gsal ba</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṁkāra­kārikā­prajñā­pāramitopadeśa­śāstra­ṭīkā­prasphuṭapadā</title>). Toh 3796, Degé Tengyur vol. 87 (sher phyin, nya),
+                                tshig le’ur byas pa’i ’grel bshad tshig rab tu gsal ba</title> (<title xml:lang="Sa-Ltn">Abhi­samayālaṃkāra­kārikā­prajñā­pāramitopadeśa­śāstra­ṭīkā­prasphuṭapadā</title>). Toh 3796, Degé Tengyur vol. 87 (sher phyin, nya),
                             folios 1.a–110.a. </bibl>
                         <bibl xml:id="UT22084-089-012-3212">Dīpaṁkaraśrījñāna. <title xml:lang="Bo-Ltn">dbu
                                 ma’i man ngag rin po che’i za ma tog kha phye ba zhes bya ba</title> (<title xml:lang="Sa-Ltn">Ratna­karaṇḍodghāṭa­nāma­madhyamakopadeśa</title>). Toh
@@ -15403,7 +15406,7 @@
                             1823, Degé Tengyur vol. 35 (rgyud, ngi), folios 267.b–278.a.</bibl>
                         <bibl xml:id="UT22084-089-012-3215">Haribhadra. <title xml:lang="Bo-Ltn">shes rab kyi pha
                             rol tu phyin pa brgyad stong pa’i bshad pa mngon par rtogs pa’i rgyan gyi
-                            snang ba</title> (<title xml:lang="Sa-Ltn">Aṣṭa­sāha­srikā­prajñāpāramitā­vyākhyānābhi­samayālaṁkārāloka</title>). Toh
+                            snang ba</title> (<title xml:lang="Sa-Ltn">Aṣṭa­sāha­srikā­prajñāpāramitā­vyākhyānābhi­samayālaṃkārāloka</title>). Toh
                             3791, Degé Tengyur vol. 85 (sher phyin, cha), folios 1.a–341.a.</bibl>
                         <bibl xml:id="UT22084-089-012-3217">Kāmadhenu. <title xml:lang="Bo-Ltn">ngan song
                                 thams cad yongs su sbyong ba gzi brjid kyi rgyal po zhes bya ba cho ga zhib
@@ -15429,7 +15432,7 @@
                                 las btus pa</title> (<title xml:lang="Sa-Ltn">Śikṣāsamuccaya</title>). Toh
                             3940, Degé Tengyur vol. 111 (dbu ma, khi), folios 3.a–194.b. </bibl>
                         <bibl xml:id="UT22084-089-012-3224">Sthiramati. <title xml:lang="Bo-Ltn">rgyan dam pa
-                                sna tshogs rim par phye ba bkod pa</title> (<title xml:lang="Sa-Ltn">Para­mālaṁkāraviśva­paṭalavyūha</title>). Toh 2661, Degé Tengyur vol. 68
+                                sna tshogs rim par phye ba bkod pa</title> (<title xml:lang="Sa-Ltn">Paramālaṃkāraviśva­paṭalavyūha</title>). Toh 2661, Degé Tengyur vol. 68
                             (rgyud, ju), folios 317.a–339.a. </bibl>
                         <bibl xml:id="UT22084-089-012-3225">Vairocanarakṣita. <title xml:lang="Bo-Ltn">bslab
                                 pa me tog snye ma</title> (<title xml:lang="Sa-Ltn">Śikṣākusuma­mañjarī</title>). Toh 3943, Degé Tengyur vol. 213 (dbu ma, khi),
@@ -15450,7 +15453,7 @@
                             Tengyur vol. 220 (mdo ’grel, ti), folios 1.b–291.a; vol. 221 (mdo ’grel, thi),
                             folios 1.b–272.a; and vol. 222 (mdo ’grel, di), folios 1.b–175.a.</bibl>
                         <bibl xml:id="UT22084-089-012-3231">Yeshe Dé (ye shes sde). <title xml:lang="Bo-Ltn">lang kar gshegs pa zhes bya ba theg pa chen po’i mdo’i ’grel pa de bzhin
-                                gshegs pa’i snying po’i rgyan</title> (<title xml:lang="Sa-Ltn">Laṅkāvatāra­nāma­mahāyāna­sūtra­vṛttitathāgata­hṛdayālaṁkāra</title>), Toh
+                                gshegs pa’i snying po’i rgyan</title> (<title xml:lang="Sa-Ltn">Laṅkāvatāra­nāma­mahāyāna­sūtra­vṛttitathāgata­hṛdayālaṃkāra</title>), Toh
                             4019, Degé Tengyur vol. 224 (mdo ’grel, pi), folios 1.a–310.a.</bibl>
                     </div>
                     <div type="section" xml:id="UT22084-089-012-listBibl-1-3">
@@ -16172,7 +16175,7 @@
                     <item>
                         <gloss xml:id="UT22084-089-012-3551" type="term" mode="match">
                             <term type="translationMain">Venerable</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">āyuśmat</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">āyuṣmat</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">tshe dang
                                 ldan pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚེ་དང་ལྡན་པ།</term>
@@ -16273,7 +16276,7 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-089-012-3558">
                             <term type="translationMain">four confidences</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">caturvaiśaradya</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">caturvaiśāradya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bsnyengs pa
                                 mi mnga’ ba bzhi</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བསྙེངས་པ་མི་མངའ་བ་བཞི།</term>
@@ -17143,7 +17146,7 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-089-012-3607">
                             <term type="translationMain">once-returner</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sakṛdāgāmi</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">sakṛdāgāmin</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lan cig
                                 phyir ’ong ba</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལན་ཅིག་ཕྱིར་འོང་བ།</term>
@@ -17636,7 +17639,7 @@
                     <item>
                         <gloss type="term" xml:id="UT22084-089-012-3633">
                             <term type="translationMain">stream entrant</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">srotāpatti</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">srotāpanna</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyun du
                                 zhugs pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱུན་དུ་ཞུགས་པ།</term>
@@ -21117,6 +21120,10 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2" status="verified">rin chen
                                 tog</term>
                             <term xml:lang="bo" type="attestedSource" n="2" status="verified">རིན་ཆེན་ཏོག</term>
+                            <term xml:lang="Bo-Ltn" n="3">rin chen mtshan</term>
+                            <term xml:lang="bo" n="3">རིན་ཆེན་མཚན།</term>
+                            <term xml:lang="Bo-Ltn" n="4">rin po che'i tog</term>
+                            <term xml:lang="bo" n="4">རིན་པོ་ཆེའི་ཏོག</term>
                             <term xml:lang="zh" type="attestedSource">寶幢</term>
                             <term xml:lang="zh" type="attestedSource">寶相佛</term>
                             <note type="definition">
@@ -22862,8 +22869,8 @@
                     </item>
                     <item>
                         <gloss type="place" xml:id="UT22084-089-012-3962">
-                            <term type="translationMain">Cāturmahārāja­kāyikā</term>
-                            <term xml:lang="Sa-Ltn" type="attestedDictionary">cāturmahārāja­kāyikā</term>
+                            <term type="translationMain">Cāturmahārāja­kāyika</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary">cāturmahārāja­kāyika</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal chen
                                 bzhi’i ris</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་ཆེན་བཞིའི་རིས།</term>
