--- a/translations/kangyur/placeholders/093-025_toh710,930-the_incantation_known_as_the_thousandfold.xml
+++ b/translations/kangyur/placeholders/093-025_toh710,930-the_incantation_known_as_the_thousandfold.xml
@@ -9,17 +9,18 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">stong 'gyur zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī “The Thousandfold”</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">stong 'gyur gyi gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-093-025-1"/>
+                <author role="translatorMain" xml:id="UT22084-093-025-1">Buddhapīṭha Translation Group</author>
                 <consultant role="projectManager" xml:id="UT22084-093-025-2">Péter-Dániel Szántó</consultant>
                 <author role="translatorEng" xml:id="UT22084-093-025-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-093-025-4">Péter-Dániel Szántó</author>
+                <editor role="projectEditor" xml:id="UT22084-093-025-21">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-093-025"/>
                 <date/>
             </publicationStmt>
@@ -79,6 +80,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-20T14:37:30.072Z" type="text-version" status="0.0.8" xml:id="UT22084-093-025-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:38:14.124Z" type="text-version" status="0.0.9" xml:id="UT22084-093-025-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:14:20.06Z" type="translation-status" status="2.f" xml:id="UT22084-093-025-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-09-26T08:14:20.06Z" type="text-version" status="0.0.10" xml:id="UT22084-093-025-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
